force-app/main/default/objects/Safety_Assessment__c/Safety_Assessment__c.object-meta.xml
<CustomObject>
    <label>Safety Assessment</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>