force-app/main/default/objects/Safety_Assessment__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>