force-app/main/default/objects/Safety_Assessment__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Safety Assessments</relationshipLabel>
    <relationshipName>Safety_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>